Fix text overflow on multiple places (#2350)
relates to xibosignage/xibo#3328

 - Viewer bottom bar
 - Widget in Playlist view
 - External Playlist editor header

--- a/ui/src/style/layout-editor.scss
+++ b/ui/src/style/layout-editor.scss
@@ -82,6 +82,9 @@ body.editor-opened {
 .main-panel, .playlist-panel {
     flex: 1;
 
+    /* Prevent growing more than the allocated space, a fix for overlay in the viewer toolbar */
+    max-width: calc(100% - 320px);
+
     .main-panel-wrapper {
         position: relative;
         height: 100%;
