--- a/ui/src/style/playlist-editor.scss
+++ b/ui/src/style/playlist-editor.scss
@@ -113,6 +113,9 @@ $timeline-step-height: 22px;
             &--left {
                 display: flex;
                 column-gap: 10px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
 
                 .playlist-info-widgets,
                 .playlist-info-duration {
@@ -132,6 +135,9 @@ $timeline-step-height: 22px;
         line-height: 1;
         font-weight: bold;
         color: $playlist-editor-main-fb-color;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .container-designer {
@@ -366,6 +372,9 @@ $timeline-step-height: 22px;
                     flex: 1;
                     display: flex;
                     flex-direction: column;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
 
                 .widgetLabel {
@@ -534,7 +543,7 @@ $timeline-step-height: 22px;
 
         .footer-controls {
             background-color: $xibo-color-primary-d60;
-            width: $left-bar-width;
+            min-width: $left-bar-width;
             height: 100%;
             display: flex;
             justify-content: space-evenly;
@@ -570,6 +579,7 @@ $timeline-step-height: 22px;
             color: $xibo-color-neutral-100;
             background-color: $xibo-color-primary;
             flex: 1;
+            width: calc(100% - 140px);
             height: 100%;
             display: flex;
             align-items: center;
@@ -577,6 +587,7 @@ $timeline-step-height: 22px;
 
             .selected-info {
                 color: $xibo-color-neutral-0;
+                max-width: calc(100% - 80px);
                 padding: 0 12px;
                 display: flex;
                 flex-direction: row;
@@ -587,6 +598,7 @@ $timeline-step-height: 22px;
                 }
 
                 .playlist-info-block {
+                    max-width: 50%;
                     &:first-child {
                         margin-right: 8px;
                     }
@@ -598,6 +610,9 @@ $timeline-step-height: 22px;
 
                 .label-name {
                     line-height: 1;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
             }
 
